--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@redux-beacon/google-tag-manager": "^1.0.1",
+    "@types/react-dom": "^16.8.4",
     "@types/react-redux": "^7.0.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
